--- a/_partial_components/footer-nav-bar.html
+++ b/_partial_components/footer-nav-bar.html
@@ -2,7 +2,7 @@
     <div class="row ">
         <div class="small-12 medium-12 large-12 columns ">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="eventi.html">Eventi</a></li>
                 <li><a href="chi-siamo.html">Chi Siamo</a></li>
