--- a/eventi-il-violino-e-la-birra.html
+++ b/eventi-il-violino-e-la-birra.html
@@ -17,7 +17,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="home.html"><img class="img-logo" src="img/logo-red.svg" alt="logo"></a></h1>
+                 <h1><a href="index.html"><img class="img-logo" src="img/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#">
@@ -320,7 +320,7 @@
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="eventi.html">Eventi</a></li>
                 <li><a href="chi-siamo.html">Chi Siamo</a></li>
