--- a/home-backup.html
+++ b/home-backup.html
@@ -17,7 +17,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                <h1><a href="home.html">Outrage Craft Beer</a></h1>
+                <h1><a href="index.html">Outrage Craft Beer</a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -419,7 +419,7 @@
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="eventi.html">Eventi</a></li>
                 <li><a href="chi-siamo.html">Chi Siamo</a></li>
