--- a/contatti.html
+++ b/contatti.html
@@ -11,7 +11,7 @@
     <meta name="copyright" content="Outrageus, inc. Copyright (c) 2014" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
-    <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
 <!-- navbar con hamburger -->
@@ -603,8 +603,8 @@
         </div>
     </div>
 <!-- fine navbar -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="js/foundation.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
