fix a br in footer

--- a/contatti.html
+++ b/contatti.html
@@ -528,7 +528,7 @@
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Orari apertura</h4>
                 <meta itemprop="openingHours" content="Su,Mo,Tu,We,Th 17:00-24:00">
-                <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00"><br>
+                <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00">
                 <p> Dom&#8202;&ndash;&#8202;Gio: 17:00&#8202;&ndash;&#8202;24:00 | Ven&#8202;&ndash;&#8202;Sab: 17:00&#8202;&ndash;&#8202;01:00 <br>
                 <em>Chiuso solo il 1 Gennaio</em></p>
             </div>
