--- a/eventi.html
+++ b/eventi.html
@@ -17,7 +17,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                <h1><a href="index.html"><img class="img-logo" src="img/logo-red.svg" alt="logo"></a></h1>
+                <h1><a href="index.html"><img class="img-logo" src="img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#">
