cambiato nome beerstrot

--- a/blog.html
+++ b/blog.html
@@ -82,7 +82,7 @@
             <article>
                 <header>
                     <img src="img/thumbs/tortellone-th.jpg" alt="Tortellone" />
-                    <h1><a href="blog-article-tortellone.html">Tortelloni fatti in casa. Una meraviglia da gustare con Outrageous IPA</a></h1>
+                    <h1><a href="blog-article-tortellone.html">Tortelloni fatti in casa. Una meraviglia da gustare con Beerstrot IPA</a></h1>
                     <h6 class="by-line">Written by <a href="team-juliet-maza.html">Juliet Mazà</a> on August 12, 2012.</h6>
                 </header>
                 <p class="first-paragraph">I tortelloni sono fatti con una sfoglia sottile, ricotta, prezzemolo per dare freschezza e spinaci. Purtroppo non avevo nessuna birra fatta da Gio e così mi sono scrofanto i tortelloni senza birra. Molto poco bello, ma.....</p>
