--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -574,7 +574,7 @@
                                 <div class="medium-12 large-12 columns">
                                     <h3>Che birre!!!!</h3>
                                     <h6 class="by-line">Scritto il 16 Settembre 2014.</h6>  
-                                    <blockquote>Wow Wow Wow. Il cibo era incredibilmente buono. Consiglio gli hamburger. Sembrano costosi, ma ci mangi quasi in due con uno... 220 grammi di carne fantastica. Io ho bevuto una outrageous IPA alla spina, buona, buona, buona. Mia moglie ha preso un bicchiere di vino del monte amiata. Le è piaciuto. Lo consiglio vivamente a tutti quanti.<cite>Andrea</cite></blockquote>
+                                    <blockquote>Wow Wow Wow. Il cibo era incredibilmente buono. Consiglio gli hamburger. Sembrano costosi, ma ci mangi quasi in due con uno... 220 grammi di carne fantastica. Io ho bevuto una Beerstrot IPA alla spina, buona, buona, buona. Mia moglie ha preso un bicchiere di vino del monte amiata. Le è piaciuto. Lo consiglio vivamente a tutti quanti.<cite>Andrea</cite></blockquote>
                                 </div> 
                             </article>
                         </div>
@@ -630,7 +630,7 @@
                                 <div class="medium-12 large-12 columns">
                                     <h3>Di meglio non esiste</h3>
                                     <h6 class="by-line">Apparso il 21 Ottobre 2014 sulla <strong>Repubblica</strong></h6>  
-                                    <blockquote cite="http:repubblica.com/outrageousbeer">Ho visitato Outrageous per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Alda Merini</cite></blockquote>
+                                    <blockquote cite="http:repubblica.com/Beerstrotbeer">Ho visitato Beerstrot per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Alda Merini</cite></blockquote>
                                     <a href="http://repubblica.it">Leggi la recensione &rarr;</a>
                                 </div> 
                             </article>
@@ -638,7 +638,7 @@
                                 <div class="medium-12 large-12 columns extra-space">
                                     <h3>Birre davvero oltraggiose per forza e carattere</h3>
                                     <h6 class="by-line">Apparso il 21 Ottobre 2014 sul <strong>Corriere della Sera</strong></h6>  
-                                    <blockquote cite="http:repubblica.com/outrageousbeer">Ho visitato Outrageous per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Reccoboni</cite></blockquote>
+                                    <blockquote cite="http:repubblica.com/Beerstrotbeer">Ho visitato Beerstrot per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Reccoboni</cite></blockquote>
                                     <a href="http://repubblica.it">Leggi la recensione &rarr;</a>
                                 </div> 
                             </article>
@@ -646,7 +646,7 @@
                                 <div class="medium-12 large-12 columns extra-space">
                                     <h3>Se non ci foste stati voi</h3>
                                     <h6 class="by-line">Apparso il 21 Ottobre 2014 su <strong>www.chebirra.it</strong></h6>  
-                                    <blockquote cite="http:repubblica.com/outrageousbeer">Ho visitato Outrageous per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Alda Merini</cite></blockquote>
+                                    <blockquote cite="http:repubblica.com/Beerstrotbeer">Ho visitato Beerstrot per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Alda Merini</cite></blockquote>
                                     <a href="http://repubblica.it">Leggi la recensione &rarr;</a>
                                 </div>
                             </article>
