--- a/contatti.html
+++ b/contatti.html
@@ -52,7 +52,7 @@
         <div class="medium-8 large-8 columns">
             <div class="row">
                 <section class="medium-12 large-12 columns">
-                    <h2>Bistrot Outrageous</h2>
+                    <h2>Bistrot Beerstrot</h2>
                     <h6>Telefono: 
                         <a href="tel:+394251234567"><span itemprop="telephone">+39 (425) 123-4567</span></a>
                     </h6>
@@ -284,7 +284,7 @@
 <!-- mostra per medium and smaller fine -->
 <!-- mostra per large-up inizio -->
                     <div class="show-for-large-up">
-                        <p>Compila tutti i campi del form e scarica le informazioni su Outrageous Craft Beer.</p>
+                        <p>Compila tutti i campi del form e scarica le informazioni su Beerstrot Craft Beer.</p>
                         <form action="input">
                             <div class="row">
                                 <div class="large-5 columns">  
