--- a/menu-beerstrot-ipa.html
+++ b/menu-beerstrot-ipa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-    <title>Outrageus | Outrageous Quintuola IPA</title>
+    <title>Outrageus | Beerstrot IPA</title>
     <meta name="description" content="Una birra extra amara di gran classe" />
     <meta name="author" content="Outrageus Craft Beer" />
     <meta name="copyright" content="Outrageus, inc. Copyright (c) 2014" />
@@ -42,13 +42,13 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="img/large/outrageous-ipa.jpg" alt="Outrageous Quintupla IPA" />
+    <img class="image-hero" src="img/large/Beerstrot-ipa.jpg" alt="Beerstrot IPA" />
     <div class="row">
         <aside class="medium-4 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Outrageous Quintupla IPA</h1>
+                        <h1>Beerstrot IPA</h1>
                         <h6 class="by-line">Written by <a href="team-giovanni-attilio.html">Giovanni Attilio</a> <br>on August 10, 2012.</h6>
                         <h6 class="by-line">Photo Credit <a href="team-andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                         <div class="share-block">
@@ -78,13 +78,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/menu-outrageous-quintupla-ipa.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/menu-Beerstrot-ipa.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/menu-outrageous-quintupla-ipa.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/menu-Beerstrot-ipa.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/menu-outrageous-quintupla-ipa.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/menu-Beerstrot-ipa.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -97,7 +97,7 @@
         <div class="medium-8 medium-push-4 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="menu.html#birra" class="left">&larr; Torna al menu</a>
-                <a href="#" class="right">....... &rarr;</a>
+                <a href="menu-porter-black.html" class="right">Porter Black &rarr;</a>
             </div>
         </div> 
     </div>
@@ -111,7 +111,7 @@
             <div id="disqus_thread"></div>
             <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'outrageousbeer'; // required: replace example with your forum shortname
+            var disqus_shortname = 'Beerstrotbeer'; // required: replace example with your forum shortname
     /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script');
