--- a/menu-testuale.html
+++ b/menu-testuale.html
@@ -142,22 +142,22 @@
                         <h3 class="subheader">Nostra produzione</h3>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h2><a href="menu-outrageous-ipa.html">Outrageous IPA</a></h2>
+                                <h2><a href="menu-Beerstrot-ipa.html">Beerstrot IPA</a></h2>
                                 <p>Fantasticamente amara</p>
                                 <h6 class="subheader">Pinta €7.00 | Half €3.50</h6>
                             </li>
                             <li>
-                                <h2><a href="menu-porter-black.html">Outrageous Porter Black Stone</a></h2>
+                                <h2><a href="menu-porter-black.html">Beerstrot Porter Black Stone</a></h2>
                                 <p>Note intense di caffè con crema</p>
                                 <h6 class="subheader">Pinta €8.00 | Half €4.00</h6>
                             </li>
                             <li>
-                                <h2><a href="menu-black-ipa-violin.html">Outrageous Black IPA Violin</a></h2>
+                                <h2><a href="menu-black-ipa-violin.html">Beerstrot Black IPA Violin</a></h2>
                                 <p>Un dolce intenso non zuccheroso</p>
                                 <h6 class="subheader">Pinta €8.00 | Half €4.00</h6>
                             </li>
                             <li>
-                                <h2><a href="menu-outrageous-quintupla-ipa.html">Outrageous Quintupla IPA</a></h2>
+                                <h2><a href="menu-Beerstrot-quintupla-ipa.html">Beerstrot Quintupla IPA</a></h2>
                                 <p>Un amaro estremamente tagliente, elegante, senza compromessi</p>
                                 <h6 class="subheader">Pinta €8.00 | Half €4.00</h6>
                             </li>
@@ -235,22 +235,22 @@
                         <h3 class="subheader">Nostra produzione</h3>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h2><a href="menu-outrageous-ipa.html">Outrageous IPA</a></h2>
+                                <h2><a href="menu-Beerstrot-ipa.html">Beerstrot IPA</a></h2>
                                 <p>Fantasticamente amara</p>
                                 <h6 class="subheader">66cl €9.00 | 50cl €7.00</h6>
                             </li>
                             <li>
-                                <h2><a href="menu-porter-black.html">Outrageous Porter Black Stone</a></h2>
+                                <h2><a href="menu-porter-black.html">Beerstrot Porter Black Stone</a></h2>
                                 <p>Note intense di caffè con crema</p>
                                 <h6 class="subheader">66cl €9.00 | 50cl €7.00</h6>
                             </li>
                             <li>
-                                <h2><a href="menu-black-ipa-violin.html">Outrageous Black IPA Violin</a></h2>
+                                <h2><a href="menu-black-ipa-violin.html">Beerstrot Black IPA Violin</a></h2>
                                 <p>Un dolce intenso non zuccheroso</p>
                                 <h6 class="subheader">66cl €9.00 | 50cl €7.00</h6>
                             </li>
                             <li>
-                                <h2><a href="menu-outrageous-quintupla-ipa.html">Outrageous Quintupla IPA</a></h2>
+                                <h2><a href="menu-Beerstrot-quintupla-ipa.html">Beerstrot Quintupla IPA</a></h2>
                                 <p>Un amaro estremamente tagliente, elegante, senza compromessi</p>
                                 <h6 class="subheader">66cl €9.00 | 50cl €7.00</h6>
                             </li>
