--- a/team-andrea-tagliazucchi.html
+++ b/team-andrea-tagliazucchi.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <title>Outrageus | Team | Andrea Tagliazucchi</title>
-    <meta name="description" content="Fondatore di Outrageous e barista in charge" />
+    <meta name="description" content="Fondatore di Beerstrot e barista in charge" />
     <meta name="author" content="Outrageus Craft Beer" />
     <meta name="copyright" content="Outrageus, inc. Copyright (c) 2014" />
     <link rel="stylesheet" href="css/app.css" />
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="medium-10 large-9 columns extra-space">
                 <h1>Andrea Tagliazucchi</h1>
-                <p class="by-line">Fondatore di Outrageous e barista in charge</p>
+                <p class="by-line">Fondatore di Beerstrot e barista in charge</p>
                 <blockquote>
                     <p>Scrivo di birra e mi piace berla di brutto. ma solo birra artigianale. <br> Tutte le foto sono fatte con un iphone 4s e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
                     <cite>Andrea</cite>
