--- a/blog-article-tortellone.html
+++ b/blog-article-tortellone.html
@@ -11,9 +11,9 @@
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:site" content="@andr3a11" />
     <meta name="twitter:title" content="Tortelloni e Birra" />
-    <meta name="twitter:description" content="Tortelloni fatti in casa: una meraviglia da gustare con Outrageous IPA" />
-    <meta name="twitter:image" content="http://outrageousbeer.bugs3.com/img/large/tortellone.jpg" />
-    <meta name="twitter:url" content="http://outrageousbeer.bugs3.com/blog-article-tortellone.html" />
+    <meta name="twitter:description" content="Tortelloni fatti in casa: una meraviglia da gustare con Beerstrot IPA" />
+    <meta name="twitter:image" content="http://Beerstrotbeer.bugs3.com/img/large/tortellone.jpg" />
+    <meta name="twitter:url" content="http://Beerstrotbeer.bugs3.com/blog-article-tortellone.html" />
     <link rel="canonical" href="" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
@@ -55,7 +55,7 @@
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Tortelloni fatti in casa: una meraviglia da gustare con Outrageous IPA</h1>
+                        <h1>Tortelloni fatti in casa: una meraviglia da gustare con Beerstrot IPA</h1>
                         <h6 class="by-line">Written by <a href="team-giovanni-attilio.html">Giovanni Attilio</a> <br>on August 10, 2012.</h6>
                         <h6 class="by-line">Photo Credit <a href="team-andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
@@ -65,15 +65,15 @@
                         <ul class="small-block-grid-3 share-block">
                             <li style="padding: 10px 0;">
                                 <label>Facebook</label>
-                                <a href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/blog-article-tortellone.html', 'Share on Facebook', 'width=650, height=280');"><span id="fb-likes-count">80</span></a>
+                                <a href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/blog-article-tortellone.html', 'Share on Facebook', 'width=650, height=280');"><span id="fb-likes-count">80</span></a>
                             </li>
                             <li style="padding: 10px 0;">
                                 <label>Twitter</label>
-                                <a href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/blog-article-tortellone.html', 'Share on Twitter', 'width=550, height=460');">46</a>
+                                <a href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/blog-article-tortellone.html', 'Share on Twitter', 'width=550, height=460');">46</a>
                             </li>
                             <li style="padding: 10px 0;">
                                 <label>Google+</label>
-                                <a href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/blog-article-tortellone.html', 'Share on Google+', 'width=650, height=600');">67</a>
+                                <a href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/blog-article-tortellone.html', 'Share on Google+', 'width=650, height=600');">67</a>
                             </li>
                         </ul>
                     </div>
@@ -102,13 +102,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/blog-article-tortellone.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/blog-article-tortellone.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/blog-article-tortellone.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/blog-article-tortellone.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/blog-article-tortellone.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/blog-article-tortellone.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -135,7 +135,7 @@
             <div id="disqus_thread"></div>
             <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'outrageousbeer'; // required: replace example with your forum shortname
+            var disqus_shortname = 'Beerstrotbeer'; // required: replace example with your forum shortname
     /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script');
