--- a/blog-birra-cibo.html
+++ b/blog-birra-cibo.html
@@ -58,15 +58,15 @@
                         <ul class="small-block-grid-3 share-block">
                             <li style="padding: 10px 0;">
                                 <label>Facebook</label>
-                                <a href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/blog-birra-cibo.html', 'Share on Facebook', 'width=650, height=280');"><span id="fb-likes-count">80<span></a>
+                                <a href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/blog-birra-cibo.html', 'Share on Facebook', 'width=650, height=280');"><span id="fb-likes-count">80<span></a>
                             </li>
                             <li style="padding: 10px 0;">
                                 <label>Twitter</label>
-                                <a href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/blog-birra-cibo.html', 'Share on Twitter', 'width=550, height=460');">46</a>
+                                <a href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/blog-birra-cibo.html', 'Share on Twitter', 'width=550, height=460');">46</a>
                             </li>
                             <li style="padding: 10px 0;">
                                 <label>Google+</label>
-                                <a href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/blog-birra-cibo.html', 'Share on Google+', 'width=650, height=600');">67</a>
+                                <a href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/blog-birra-cibo.html', 'Share on Google+', 'width=650, height=600');">67</a>
                             </li>
                         </ul>
                     </div>
@@ -95,13 +95,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/blog-birra-cibo.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/blog-birra-cibo.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/blog-birra-cibo.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/blog-birra-cibo.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/blog-birra-cibo.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/blog-birra-cibo.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -128,7 +128,7 @@
             <div id="disqus_thread"></div>
             <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'outrageousbeer'; // required: replace example with your forum shortname
+            var disqus_shortname = 'Beerstrotbeer'; // required: replace example with your forum shortname
     /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script');
