--- a/eventi-flamenco-e-birra.html
+++ b/eventi-flamenco-e-birra.html
@@ -68,7 +68,7 @@
             <div class="medium-8 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Elegante e conturbante</h2>
                 <p>Per il ciclo: Servizi di Classe&#8202;&mdash;&#8202;Flamenco e Birra. 
-                <p>La magica chitarra di Mendez DosCoines accompagnerà la presentazione della nuova birra <a href="menu-outrageous-quintupla-ipa.html">Outrageous Quintupla IPA</a> e dei piatti appositamente creati dallo Chef Giovanni per l'occasione.</p>
+                <p>La magica chitarra di Mendez DosCoines accompagnerà la presentazione della nuova birra <a href="menu-Beerstrot-quintupla-ipa.html">Beerstrot Quintupla IPA</a> e dei piatti appositamente creati dallo Chef Giovanni per l'occasione.</p>
                 <p>Raffinatissimo, elegantissimmo, sensuale.</p>
 <!-- call to action inizio -->
                 <div class="row">
@@ -141,13 +141,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/eventi-flamenco-e-birra.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/eventi-flamenco-e-birra.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/eventi-flamenco-e-birra.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/eventi-flamenco-e-birra.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/eventi-flamenco-e-birra.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/eventi-flamenco-e-birra.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -174,7 +174,7 @@
             <div id="disqus_thread"></div>
             <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'outrageousbeer'; // required: replace example with your forum shortname
+            var disqus_shortname = 'Beerstrotbeer'; // required: replace example with your forum shortname
     /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script');
