--- a/eventi.html
+++ b/eventi.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <title>Outrageus | Vivi l'Esperienza</title>
-    <meta name="description" content="Eventi di Outrageous" />
+    <meta name="description" content="Eventi di Beerstrot" />
     <meta name="author" content="Outrageus Craft Beer" />
     <meta name="copyright" content="Outrageus, inc. Copyright (c) 2014" />
     <link rel="stylesheet" href="css/app.css" />
@@ -61,7 +61,7 @@
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Il violino e la birra</h2>
-                    <p>Il violino di Zanna l'Elefante ci allieterà nella degustazione della <a href="menu-black-ipa-violin.html">Outrageous Black IPA Violin</a>. Una birra con una cattiveria inaudita.</p>
+                    <p>Il violino di Zanna l'Elefante ci allieterà nella degustazione della <a href="menu-black-ipa-violin.html">Beerstrot Black IPA Violin</a>. Una birra con una cattiveria inaudita.</p>
                     <a href="eventi-il-violino-e-la-birra.html">Scopri l'evento &rarr;</a>
                 </div>
                 <div class="row">
@@ -101,7 +101,7 @@
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Flamenco e birra</h2>
-                    <p>La magica chitarra di Mendez DosCoines accompagnerà la presentazione della nuova birra <a href="menu-outrageous-quintupla-ipa.html">Ourageous Quintupla IPA</a> e dei piatti appositamente creati dallo Chef Giovanni.</p>
+                    <p>La magica chitarra di Mendez DosCoines accompagnerà la presentazione della nuova birra <a href="menu-Beerstrot-quintupla-ipa.html">Ourageous Quintupla IPA</a> e dei piatti appositamente creati dallo Chef Giovanni.</p>
                     <a href="eventi-flamenco-e-birra.html">Scopri l'evento &rarr;</a>
                 </div>
                 <div class="row">
