--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="medium-4 large-4 columns">
                     <h1 class="extra-space">Eventi</h1>
                     <img class="extra-space-image-event-blog" src=" http://placehold.it/1920x1080" alt="">
-                    <p>A Outrageous facciamo un sacco di eventi: 
+                    <p>A Beerstrot facciamo un sacco di eventi: 
                     <ul class="no-margin-list-bullet">
                         <li>Abbinamenti di cibi e birre</li>
                         <li>Concerti con volume non assordante</li>
