--- a/menu-black-ipa-violin.html
+++ b/menu-black-ipa-violin.html
@@ -78,13 +78,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/menu-black-ipa-violin.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/menu-black-ipa-violin.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/menu-black-ipa-violin.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/menu-black-ipa-violin.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/menu-black-ipa-violin.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/menu-black-ipa-violin.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -97,7 +97,7 @@
         <div class="medium-8 medium-push-4 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="menu.html#birra" class="left">&larr; Torna al menu</a>
-                <a href="menu-outrageous-quintupla-ipa.html" class="right">Quintupla IPA &rarr;</a>
+                <a href="menu-Beerstrot-quintupla-ipa.html" class="right">Quintupla IPA &rarr;</a>
             </div>
         </div> 
     </div>
@@ -111,7 +111,7 @@
             <div id="disqus_thread"></div>
             <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'outrageousbeer'; // required: replace example with your forum shortname
+            var disqus_shortname = 'Beerstrotbeer'; // required: replace example with your forum shortname
     /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script');
