--- a/menu-chicken-wings.html
+++ b/menu-chicken-wings.html
@@ -61,7 +61,7 @@
             <p>Piccanti o non piccanti, un piatto succulento da gustare con blue cheese e verdure di stagione. oppure con patate appena tagliate. Fritte in olio di arachidi e passate al forno: leggerissime e stupendamente buone.</p>
             <p>Si mangiano con le mani, ma ti diamo anche le posate.</p>
             <h2>Con cosa assaggiarlo</h2>
-            <p><a href="menu-outrageous-ipa.html">Outrageous IPA</a> per contrastare il salato</p>
+            <p><a href="menu-Beerstrot-ipa.html">Beerstrot IPA</a> per contrastare il salato</p>
             <p><a href="menu-porter-black.html">Porter Black</a> per armonizzare il salato</p>
         </div>
     </div>
@@ -76,13 +76,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/menu-chicken-wings.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/menu-chicken-wings.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/menu-chicken-wings.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/menu-chicken-wings.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/menu-chicken-wings.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/menu-chicken-wings.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -109,7 +109,7 @@
             <div id="disqus_thread"></div>
             <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'outrageousbeer'; // required: replace example with your forum shortname
+            var disqus_shortname = 'Beerstrotbeer'; // required: replace example with your forum shortname
     /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script');
