--- a/menu-con-immagini.html
+++ b/menu-con-immagini.html
@@ -198,10 +198,10 @@
                         <h4 class="subheader">Nostra produzione</h4>
                         <ul class="small-block-grid-2 medium-block-grid-2 large-block-grid-3">
                             <li>
-                                <a href="menu-outrageous-ipa.html">
-                                    <img src="img/thumbs/outrageous-ipa-th.jpg" alt="Outrageous IPA">
+                                <a href="menu-Beerstrot-ipa.html">
+                                    <img src="img/thumbs/Beerstrot-ipa-th.jpg" alt="Beerstrot IPA">
                                     <div class="panel">
-                                        <h5>Outrageous IPA</h5>
+                                        <h5>Beerstrot IPA</h5>
                                         <h6 class="subheader">Pinta €7.00 <br>Half €3.50</h6>
                                     </div>
                                 </a>
@@ -225,7 +225,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="menu-outrageous-quintupla-ipa.html">
+                                <a href="menu-Beerstrot-quintupla-ipa.html">
                                     <img src="img/thumbs/black-ipa-violin-th.jpg" alt="Quintupla IPA">
                                     <div class="panel">
                                         <h5>Quintupla IPA</h5>
