--- a/menu-fiore-di-zucca.html
+++ b/menu-fiore-di-zucca.html
@@ -59,7 +59,7 @@
             <h2>Dellicata sfoglia anche per vegani</h2>
             <p >Una delicatissima sfoglia riempita con fiori di zucca, fragole dicampo e ciliege di Vignola appena colte. Un sapore armonioso e fresco.</p>
             <h2>Con cosa assaggiarlo</h2>
-            <p><a href="menu-outrageous-ipa.html">Outrageous IPA</a> per contrastare il dolce</p>
+            <p><a href="menu-Beerstrot-ipa.html">Beerstrot IPA</a> per contrastare il dolce</p>
             <p><a href="menu-porter-black.html">Porter Black</a> per intensificare il dolce</p>
         </div>
     </div>
@@ -74,13 +74,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/menu-fiore-di-zucca.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/menu-fiore-di-zucca.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/menu-fiore-di-zucca.html.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/menu-fiore-di-zucca.html.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/menu-fiore-di-zucca.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/menu-fiore-di-zucca.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -107,7 +107,7 @@
             <div id="disqus_thread"></div>
             <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'outrageousbeer'; // required: replace example with your forum shortname
+            var disqus_shortname = 'Beerstrotbeer'; // required: replace example with your forum shortname
     /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script');
