--- a/menu-tris-mini-hamburger.html
+++ b/menu-tris-mini-hamburger.html
@@ -60,7 +60,7 @@
             <p>Tre mini hamburger, 60 grammi di freschezza ciascuno.</p>
             <p>Pomodoro, prezzemolo, e salsa piccante: un trio fantastico per aprire il cuore e deliziare l'anima.</p>
             <h2>Con cosa assaggiarlo</h2>
-            <p><a href="menu-outrageous-ipa.html">Outrageous IPA</a> per contrastare il salato</p>
+            <p><a href="menu-Beerstrot-ipa.html">Beerstrot IPA</a> per contrastare il salato</p>
             <p><a href="menu-porter-black.html">Porter Black</a> per armonizzare il salato</p>
         </div>
     </div>
@@ -75,13 +75,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://outrageousbeer.bugs3.com/menu-tris-mini-hamburger.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://Beerstrotbeer.bugs3.com/menu-tris-mini-hamburger.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://outrageousbeer.bugs3.com/menu-tris-mini-hamburger.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://Beerstrotbeer.bugs3.com/menu-tris-mini-hamburger.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://outrageousbeer.bugs3.com/menu-tris-mini-hamburger.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://Beerstrotbeer.bugs3.com/menu-tris-mini-hamburger.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +108,7 @@
             <div id="disqus_thread"></div>
             <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'outrageousbeer'; // required: replace example with your forum shortname
+            var disqus_shortname = 'Beerstrotbeer'; // required: replace example with your forum shortname
     /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script');
