--- a/menu.html
+++ b/menu.html
@@ -151,22 +151,22 @@
                             <h3 class="subheader">Nostra produzione</h3>
                             <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                 <li>
-                                    <h2><a href="menu-outrageous-ipa.html">Outrageous IPA</a></h2>
+                                    <h2><a href="menu-Beerstrot-ipa.html">Beerstrot IPA</a></h2>
                                     <p>Fantasticamente amara</p>
                                     <h6 class="subheader">Pinta €7 | Half €3.5</h6>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-porter-black.html">Outrageous Porter Black Stone</a></h2>
+                                    <h2><a href="menu-porter-black.html">Beerstrot Porter Black Stone</a></h2>
                                     <p>Note intense di caffè con crema</p>
                                     <h6 class="subheader">Pinta €8 | Half €4</h6>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-black-ipa-violin.html">Outrageous Black IPA Violin</a></h2>
+                                    <h2><a href="menu-black-ipa-violin.html">Beerstrot Black IPA Violin</a></h2>
                                     <p>Un dolce intenso non zuccheroso</p>
                                     <h6 class="subheader">Pinta €8 | Half €4</h6>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-outrageous-quintupla-ipa.html">Outrageous Quintupla IPA</a></h2>
+                                    <h2><a href="menu-Beerstrot-quintupla-ipa.html">Beerstrot Quintupla IPA</a></h2>
                                     <p>Un amaro estremamente tagliente, elegante, senza compromessi</p>
                                     <h6 class="subheader">Pinta €8 | Half €4</h6>
                                 </li>
@@ -244,22 +244,22 @@
                             <h3 class="subheader">Nostra produzione</h3>
                             <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                 <li>
-                                    <h2><a href="menu-outrageous-ipa.html">Outrageous IPA</a></h2>
+                                    <h2><a href="menu-Beerstrot-ipa.html">Beerstrot IPA</a></h2>
                                     <p>Fantasticamente amara</p>
                                     <h6 class="subheader">66cl €9 | 50cl €7</h6>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-porter-black.html">Outrageous Porter Black Stone</a></h2>
+                                    <h2><a href="menu-porter-black.html">Beerstrot Porter Black Stone</a></h2>
                                     <p>Note intense di caffè con crema</p>
                                     <h6 class="subheader">66cl €9 | 50cl €7</h6>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-black-ipa-violin.html">Outrageous Black IPA Violin</a></h2>
+                                    <h2><a href="menu-black-ipa-violin.html">Beerstrot Black IPA Violin</a></h2>
                                     <p>Un dolce intenso non zuccheroso</p>
                                     <h6 class="subheader">66cl €9 | 50cl €7</h6>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-outrageous-quintupla-ipa.html">Outrageous Quintupla IPA</a></h2>
+                                    <h2><a href="menu-Beerstrot-quintupla-ipa.html">Beerstrot Quintupla IPA</a></h2>
                                     <p>Un amaro estremamente tagliente, elegante, senza compromessi</p>
                                     <h6 class="subheader">66cl €9 | 50cl €7</h6>
                                 </li>
