--- a/blog-article-tortellone.html
+++ b/blog-article-tortellone.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-    <title>Outrageus | Tortelloni e Birre</title>
+    <title>Beerstrot | Tortelloni e Birre</title>
     <meta name="description" content="Amiamo la Birra e diffondere l'amore per questo prezioso liquido. Bere Birra e mangiare Tortelloni è una cosa meravigliosa." />
-    <meta name="author" content="Outrageus Craft Beer" />
-    <meta name="copyright" content="Outrageus, inc. Copyright (c) 2014" />
+    <meta name="author" content="Beerstrot Craft Beer" />
+    <meta name="copyright" content="Beerstrot, inc. Copyright (c) 2015" />
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:site" content="@andr3a11" />
     <meta name="twitter:title" content="Tortelloni e Birra" />
@@ -171,7 +171,7 @@
             </div>
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-twitter icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Outrageus. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
+                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
                 <a href="#">Seguici su Twitter</a>
                 <span class="show-for-small">
                     <hr>
@@ -179,7 +179,7 @@
             </div>
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-facebook icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Outrageus. Fai parte della community.</p>
+                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
                 <a href="#">Seguici su Facebook</a>
             </div>
         </div>
@@ -208,8 +208,8 @@
                     </a>
                 </p>
                 <p>
-                    <a href="mailto:book@outrageus.com">
-                        <span itemprop="email">book@outrageus.com</span>
+                    <a href="mailto:book@Beerstrot.com">
+                        <span itemprop="email">book@Beerstrot.com</span>
                     </a>
                 </p>
             </div>
