--- a/blog.html
+++ b/blog.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-    <title>Outrageus | Novità, Eventi, Racconti e Storie</title>
+    <title>Beerstrot | Novità, Eventi, Racconti e Storie</title>
     <meta name="description" content="Amiamo la Birra e diffondere l'amore per questo prezioso liquido. Facciamo la Birra, ci cuciniamo e ci divertiamo a raccontare come." />
-    <meta name="author" content="Outrageus Craft Beer" />
-    <meta name="copyright" content="Outrageus, inc. Copyright (c) 2014" />
+    <meta name="author" content="Beerstrot Craft Beer" />
+    <meta name="copyright" content="Beerstrot, inc. Copyright (c) 2015" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -133,7 +133,7 @@
             </div>
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-twitter icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Outrageus. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
+                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
                 <a href="#">Seguici su Twitter</a>
                 <span class="show-for-small">
                     <hr>
@@ -141,7 +141,7 @@
             </div>
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-facebook icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Outrageus. Fai parte della community.</p>
+                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
                 <a href="#">Seguici su Facebook</a>
             </div>
         </div>
@@ -170,8 +170,8 @@
                     </a>
                 </p>
                 <p>
-                    <a href="mailto:book@outrageus.com">
-                        <span itemprop="email">book@outrageus.com</span>
+                    <a href="mailto:book@Beerstrot.com">
+                        <span itemprop="email">book@Beerstrot.com</span>
                     </a>
                 </p>
             </div>
