--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-    <title>Outrageus | Birra Artigianale e Cibo Divino</title>
+    <title>Beerstrot | Birra Artigianale e Cibo Divino</title>
     <meta name="description" content="Birra artigianale e cibo di altissima qualità. Utilizziamo solo prodotti freschi. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo." />
-    <meta name="author" content="Outrageus Craft Beer" />
-    <meta name="copyright" content="Outrageus, inc. Copyright (c) 2014" />
+    <meta name="author" content="Beerstrot Craft Beer" />
+    <meta name="copyright" content="Beerstrot, inc. Copyright (c) 2015" />
+    <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="stylesheet" href="css/app.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -244,7 +245,7 @@
             </div>
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-twitter icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Outrageus. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
+                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
                 <a href="#">Seguici su Twitter</a>
                 <span class="show-for-small">
                     <hr>
@@ -252,7 +253,7 @@
             </div>
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-facebook icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Outrageus. Fai parte della community.</p>
+                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
                 <a href="#">Seguici su Facebook</a>
             </div>
         </div>
@@ -281,8 +282,8 @@
                     </a>
                 </p>
                 <p>
-                    <a href="mailto:book@outrageus.com">
-                        <span itemprop="email">book@outrageus.com</span>
+                    <a href="mailto:book@Beerstrot.com">
+                        <span itemprop="email">book@Beerstrot.com</span>
                     </a>
                 </p>
             </div>
