fix twitter account

--- a/menu.html
+++ b/menu.html
@@ -555,7 +555,10 @@
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-twitter icon-font-style"></span>
                 <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
-                <a href="#">Seguici su Twitter</a>
+                <a href="https://twitter.com/intent/follow?screen_name=beerstrot">Seguici su Twitter</a>
+                <script>
+                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+                </script>
                 <span class="show-for-small">
                     <hr>
                 </span>
