--- a/blog-article-tortellone.html
+++ b/blog-article-tortellone.html
@@ -102,8 +102,7 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u';
-                            url += encodeURIComponent(location.href);window.open(url,  'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/blog-article-tortellone.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
                             <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/blog-article-tortellone.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
@@ -185,7 +184,7 @@
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-facebook icon-font-style"></span>
                 <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
-                <a href="https://www.facebook.com/cavecchiabeerstrot">Seguici su Facebook</a>
+                <a href="https://www.facebook.com/cavecchiabeerstrot" target="_blank">Seguici su Facebook</a>
             </div>
         </div>
     </footer>
