--- a/blog-birra-e-tapas.html
+++ b/blog-birra-e-tapas.html
@@ -176,7 +176,7 @@
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-facebook icon-font-style"></span>
                 <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
-                <a href="https://www.facebook.com/cavecchiabeerstrot">Seguici su Facebook</a>
+                <a href="https://www.facebook.com/cavecchiabeerstrot" target="_blank">Seguici su Facebook</a>
             </div>
         </div>
     </footer>
