--- a/contatti.html
+++ b/contatti.html
@@ -52,12 +52,12 @@
         <div class="medium-8 large-8 columns">
             <div class="row">
                 <section class="medium-12 large-12 columns">
-                    <h2>Bistrot Beerstrot</h2>
+                    <h2>Ca' Vecchia Beerstrot</h2>
                     <h6>Telefono: 
                         <a href="tel:+394251234567"><span itemprop="telephone">+39 (425) 123-4567</span></a>
                     </h6>
                     <h6>Email: 
-                        <a href="mailto:info@Beerstrot.com"><span itemprop="email">info@Beerstrot.com</span></a>
+                        <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
                     </h6>
                     <h6>Indirizzo: 
                         <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
@@ -523,7 +523,7 @@
                     </a>
                 </p>
                 <p>
-                    <a href="mailto:book@Beerstrot.com">
+                    <a href="mailto:book@beerstrot.com">
                         <span itemprop="email">book@Beerstrot.com</span>
                     </a>
                 </p>
