change email and phone number

--- a/blog-birra-cibo.html
+++ b/blog-birra-cibo.html
@@ -144,27 +144,46 @@
 <!-- fine commenti -->
 <!-- inizio footer -->
 <footer class="panel panel-prefooter extra-space-footer">
-        <div class="row">
+        <div class="row" id="mc_embed_signup">
             <div class="large-4 medium-4 columns">
                 <span class="fi-mail icon-font-style"></span>
-                <p>Iscriviti alla newsletter mensile per rimanere informato sulla nuove birre (4 o 5 arrivi a settimana), menu e eventi.</p>
-                <form action="input"> 
+                <p>Iscriviti alla newsletter mensile.</p>
+                <!-- Begin MailChimp Signup Form -->
+                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=f3dfbe8fd0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div class="row collapse">
                         <div class="small-8 columns">
-                            <input type="email" placeholder="Your email">
+                            <div id="mc_embed_signup_scroll">
+                                <div class="mc-field-group">
+                                    <!-- <label for="mce-EMAIL">Email </label> -->
+                                    <input type="email" value="" name="EMAIL" placeholder="Your email" class="required email" id="mce-EMAIL">
+                                </div>
+                                <div id="mce-responses" class="clear">
+                                    <div class="response" id="mce-error-response" style="display:none">
+                                    </div>
+                                    <div class="response" id="mce-success-response" style="display:none">
+                                    </div>
+                                </div>
+                                 
+                            </div>
                         </div>
-                        <div class="small-4 columns">
-                            <a href="#" class="button postfix">Iscriviti</a>
+                        <div class="small-4 columns">     
+                            <div class="clear">
+                                <input type="submit" value="Iscriviti" name="subscribe" id="mc-embedded-subscribe" class="button postfix">
+                            </div>                
                         </div>
                     </div>
                 </form>
-                <span class="show-for-small">
-                    <hr>
-                </span>
             </div>
+
+<!--End mc_embed_signup-->
+
+            <span class="show-for-small">
+                <hr>
+            </span>
+        
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-twitter icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
+                <p>Dacci i tuoi feedback.</p>
                 <a href="https://twitter.com/intent/follow?screen_name=beerstrot">Seguici su Twitter</a>
                 <script>
                     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
@@ -175,7 +194,7 @@
             </div>
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-facebook icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
+                <p>Fai parte della community.</p>
                 <a href="https://www.facebook.com/cavecchiabeerstrot" target="_blank">Seguici su Facebook</a>
             </div>
         </div>
@@ -199,13 +218,13 @@
             <div class="small-6 medium-3 large-3 columns clearfix">
                 <h4 class="subheader">Contattaci</h4>
                 <p>
-                    <a href="tel:+394251234567">
-                        <span itemprop="telephone">+39 (425) 123-4567</span>
+                    <a href="tel:+393385071940">
+                        <span itemprop="telephone">+39 338 507 1940</span>
                     </a>
                 </p>
                 <p>
-                    <a href="mailto:book@Beerstrot.com">
-                        <span itemprop="email">book@Beerstrot.com</span>
+                    <a href="mailto:info@beerstrot.it">
+                        <span itemprop="email">info@beerstrot.it</span>
                     </a>
                 </p>
             </div>
