--- a/contatti.html
+++ b/contatti.html
@@ -54,7 +54,7 @@
                 <section class="medium-12 large-12 columns">
                     <h2>Ca' Vecchia Beerstrot</h2>
                     <h6>Telefono: 
-                        <a href="tel:+394251234567"><span itemprop="telephone">+39 (425) 123-4567</span></a>
+                        <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
                     </h6>
                     <h6>Email: 
                         <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
@@ -518,13 +518,13 @@
             <div class="small-6 medium-3 large-3 columns clearfix">
                 <h4 class="subheader">Contattaci</h4>
                 <p>
-                    <a href="tel:+394251234567">
-                        <span itemprop="telephone">+39 (425) 123-4567</span>
+                    <a href="tel:+393385071940">
+                        <span itemprop="telephone">+39 338 507 1940</span>
                     </a>
                 </p>
                 <p>
-                    <a href="mailto:book@beerstrot.com">
-                        <span itemprop="email">book@Beerstrot.com</span>
+                    <a href="mailto:info@beerstrot.it">
+                        <span itemprop="email">info@beerstrot.it</span>
                     </a>
                 </p>
             </div>
