--- a/menu-battuto-di-vitello.html
+++ b/menu-battuto-di-vitello.html
@@ -176,13 +176,13 @@
             <div class="small-6 medium-3 large-3 columns clearfix">
                 <h4 class="subheader">Contattaci</h4>
                 <p>
-                    <a href="tel:+394251234567">
-                        <span itemprop="telephone">+39 (425) 123-4567</span>
+                    <a href="tel:+393385071940">
+                        <span itemprop="telephone">+39 338 507 1940</span>
                     </a>
                 </p>
                 <p>
-                    <a href="mailto:book@Beerstrot.com">
-                        <span itemprop="email">book@Beerstrot.com</span>
+                    <a href="mailto:info@beerstrot.it">
+                        <span itemprop="email">info@beerstrot.it</span>
                     </a>
                 </p>
             </div>
