--- a/menu-testuale.html
+++ b/menu-testuale.html
@@ -445,7 +445,7 @@
         <div class="small-12 medium-12 large-12  columns">
             <div class="panel callout">
                 <h2>Prenota un tavolo</h2>
-                <h6 class=" subheader">Obbligo di prenotazione per gruppi superiori a 6 persone. Per 9 persone e più chiamaci al <a href="tel:+394251234567"><span itemprop="telephone">+39 (425) 123-4567</span></a>.</h6>
+                <h6 class=" subheader">Obbligo di prenotazione per gruppi superiori a 6 persone. Per 9 persone e più chiamaci al <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>.</h6>
                 <form action="input">
                     <div class ="row">
                         <div class="small-3 medium-2 large-2 columns extra-space">  
@@ -554,13 +554,13 @@
             <div class="small-6 medium-3 large-3 columns clearfix">
                 <h4 class="subheader">Contattaci</h4>
                 <p>
-                    <a href="tel:+394251234567">
-                        <span itemprop="telephone">+39 (425) 123-4567</span>
+                    <a href="tel:+393385071940">
+                        <span itemprop="telephone">+39 338 507 1940</span>
                     </a>
                 </p>
                 <p>
-                    <a href="mailto:book@Beerstrot.com">
-                        <span itemprop="email">book@Beerstrot.com</span>
+                    <a href="mailto:info@beerstrot.it">
+                        <span itemprop="email">info@beerstrot.it</span>
                     </a>
                 </p>
             </div>
