--- a/blog-article-tortellone.html
+++ b/blog-article-tortellone.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <title>Beerstrot | Tortelloni e Birre</title>
     <meta name="description" content="Amiamo la Birra e diffondere l'amore per questo prezioso liquido. Bere Birra e mangiare Tortelloni è una cosa meravigliosa." />
-    <meta name="author" content="Beerstrot Craft Beer" />
-    <meta name="copyright" content="Beerstrot, inc. Copyright (c) 2015" />
+    <meta name="author" content="Ca' Vecchia Beerstrot" />
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:site" content="@andr3a11" />
     <meta name="twitter:title" content="Tortelloni e Birra" />
