--- a/contatti.html
+++ b/contatti.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <title>Beerstrot | Contatti</title>
     <meta name="description" content="Birre rigorosamente artigianali: servite nel bicchiere che ne risalta profumi e sapori. Impieghiamo ore per fare training ai nostri ragazzi." />
-    <meta name="author" content="Beerstrot Craft Beer" />
-    <meta name="copyright" content="Beerstrot, inc. Copyright (c) 2015" />
+    <meta name="author" content="Ca' Vecchia Beerstrot" />
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -284,7 +284,7 @@
 <!-- mostra per medium and smaller fine -->
 <!-- mostra per large-up inizio -->
                     <div class="show-for-large-up">
-                        <p>Compila tutti i campi del form e scarica le informazioni su Beerstrot Craft Beer.</p>
+                        <p>Compila tutti i campi del form e scarica le informazioni su Ca' Vecchia Beerstrot.</p>
                         <form action="input">
                             <div class="row">
                                 <div class="large-5 columns">  
