--- a/blog-birra-e-tapas.html
+++ b/blog-birra-e-tapas.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <title>Beerstrot | Birra e Tapas</title>
     <meta name="description" content="Amiamo la Birra e diffondere l'amore per questo prezioso liquido. Facciamo la Birra, ci cuciniamo e ci divertiamo a raccontare come." />
-    <meta name="author" content="Beerstrot Craft Beer" />
-    <meta name="copyright" content="Beerstrot, inc. Copyright (c) 2015" />
+    <meta name="author" content="Ca' Vecchia Beerstrot" />
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
