--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <title>Beerstrot | Birra Artigianale e Cibo Divino</title>
     <meta name="description" content="Birra artigianale e cibo di altissima qualità. Utilizziamo solo prodotti freschi. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo." />
-    <meta name="author" content="Beerstrot Craft Beer" />
-    <meta name="copyright" content="Beerstrot, inc. Copyright (c) 2015" />
+    <meta name="author" content="Ca' Vecchia Beerstrot" />
+    <meta name="copyright" content="Beerstrot Copyright (c) 2015" />
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="stylesheet" href="css/app.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
@@ -226,47 +226,45 @@
 <!-- inizio footer -->
     <footer class="panel panel-prefooter extra-space-footer">
         <div class="row">
-            <div class="large-4 medium-4 columns">
-                <span class="fi-mail icon-font-style"></span>
-                <p>Iscriviti alla newsletter mensile per rimanere informato sulla nuove birre (4 o 5 arrivi a settimana), menu e eventi.</p>
+            <!-- <div class="large-4 medium-4 columns">
                 <form action="input"> 
                     <div class="row collapse">
                         <div class="small-8 columns">
-                            <input type="email" placeholder="Your email">
+                            <input type="email" placeholder="La tua email">
                         </div>
                         <div class="small-4 columns">
                             <a href="#" class="button postfix">Iscriviti</a>
                         </div>
                     </div>
                 </form>
-                <span class="show-for-small">
-                    <hr>
-                </span>
-            </div>
-            <div class="large-4 medium-4 columns">
-                <span class="fi-social-twitter icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Dacci i tuoi feedback e se c'è qualcosa che non va questo è il posto giusto dove scriverci.</p>
-                <a href="https://twitter.com/intent/follow?screen_name=beerstrot">Seguici su Twitter</a>
-                <script>
-                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-                </script>
-                <span class="show-for-small">
-                    <hr>
-                </span>
-            </div>
-            <div class="large-4 medium-4 columns">
-                <span class="fi-social-facebook icon-font-style"></span>
-                <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
-                <a href="https://www.facebook.com/cavecchiabeerstrot" target="_blank">Seguici su Facebook</a>
+            </div> -->
+            <div class="large-4 medium-4 columns extra-space">
+                <ul class="small-block-grid-3">
+                    <li>
+                        <span>
+                        <a class="fi-social-facebook icon-font-style" href="https://www.facebook.com/cavecchiabeerstrot" target="_blank"></a>
+                        </span>
+                    </li>
+                    <li>
+                        <span>
+                        <a class="fi-social-twitter icon-font-style" href="https://twitter.com/intent/follow?screen_name=beerstrot"></a>
+                        </span>
+                    </li>
+                    <li>
+                        <span>
+                        <a class="fi-social-google-plus icon-font-style" href="https://plus.google.com/102722719947371580904"></a>
+                        </span>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
     <footer class="panel-footer">
         <div class="row">
-            <div class="small-6 medium-3 large-3 columns">
+            <div class="small-6 medium-4 large-4 columns">
                 <h4 class="subheader">Dove Siamo</h4>
                 <p>
-                    <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                    <a href="http://maps.google.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                         <span itemprop="streetAddress">Via Centofinestre, 20</span>
                         <br class="hide-for-small">
                         <span itemprop="postalCode">60024</span>
@@ -277,27 +275,31 @@
                     </a>
                 </p>
             </div>
-            <div class="small-6 medium-3 large-3 columns clearfix">
-                <h4 class="subheader">Contattaci</h4>
+            <div class="small-6 medium-4 large-4 columns clearfix">
+                <h4 class="subheader">Prenota Tavolo</h4>
                 <p>
                     <a href="tel:+393385071940">
                         <span itemprop="telephone">+39 338 507 1940</span>
                     </a>
                 </p>
-                <p>
+                <!-- <p>
                     <a href="mailto:info@beerstrot.it">
                         <span itemprop="email">info@beerstrot.it</span>
                     </a>
-                </p>
+                </p> -->
             </div>
-            <div class="small-6 medium-3 large-3 columns">
+            <div class="small-12 medium-4 large-4 columns">
                 <h4 class="subheader">Orari apertura</h4>
-                <meta itemprop="openingHours" content="Su,Mo,Tu,We,Th 17:00-24:00">
-                <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00">
-                <p> Dom&#8202;&ndash;&#8202;Gio: 17:00&#8202;&ndash;&#8202;24:00 | Ven&#8202;&ndash;&#8202;Sab: 17:00&#8202;&ndash;&#8202;01:00 <br>
-                <em>Chiuso solo il 1 Gennaio</em></p>
+                <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
+                <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
+                <meta itemprop="openingHours" content="Sa 18:00-01:00">
+                <meta itemprop="openingHours" content="Su 12:00-22:00">
+                <p> Mar&#8202;&ndash;&#8202;Ven: 12:00&ensp;&ndash;&ensp;14:00 | 18:00&ensp;&ndash;&ensp;00:00 <br>
+                Sab: 18:00&ensp;&ndash;&ensp;01:00 <br>
+                Dom: 12:00&ensp;&ndash;&ensp;22:00 <br></p>
+                <p><em>Chiuso il Lunedì</em></p>
             </div>
-            <div class="small-6 medium-3 large-3 columns end">
+            <!-- <div class="small-6 medium-3 large-3 columns end">
                 <h4 class="subheader">Prenota</h4>
                 <p><a role="button" href="#" class="button tiny " data-reveal-id="prenota-online">Prenota un tavolo</a></p>
                 <div id="prenota-online" class="reveal-modal" data-reveal>
@@ -349,7 +351,7 @@
                             </div> 
                         </div>
                     </form>  
-                </div>
+                </div> -->
             </div>
         </div>
     </footer>
