--- a/menu-fiore-di-zucca.html
+++ b/menu-fiore-di-zucca.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <title>Beerstrot | Fiore di Zucca</title>
     <meta name="description" content="Un'opera d'arte per il palato. Fiori di zucca con fragole e ciliege. Vegetariano" />
-    <meta name="author" content="Beerstrot Craft Beer" />
-    <meta name="copyright" content="Beerstrot, inc. Copyright (c) 2015" />
+    <meta name="author" content="Ca' Vecchia Beerstrot" />
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
