--- a/menu.html
+++ b/menu.html
@@ -456,7 +456,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="hide-for-small" itemprop="addressCountry">Italy</span>
+                        <span class="hide-for-small" itemprop="addressCountry">italia</span>
                     </a>
                 </h6>
                 
@@ -582,7 +582,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="" itemprop="addressCountry">Italy</span>
+                        <span class="" itemprop="addressCountry">italia</span>
                     </a>
                 </p>
             </div>
