--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -269,7 +269,7 @@
                                         <span itemprop="addressLocality">Filottrano</span>
                                         <span itemprop="addressRegion">AN</span>
                                         <br class="hide-for-small">
-                                        <span class="hide-for-small" itemprop="addressCountry">Italy</span>
+                                        <span class="hide-for-small" itemprop="addressCountry">italia</span>
                                     </a>
                                 </h6>
                                 
@@ -434,7 +434,7 @@
                                 <span itemprop="addressLocality">Filottrano</span>
                                 <span itemprop="addressRegion">AN</span>
                                 <br class="hide-for-small">
-                                <span class="hide-for-small" itemprop="addressCountry">Italy</span>
+                                <span class="hide-for-small" itemprop="addressCountry">italia</span>
                             </a>
                         </h6>
                         <h5 class="extra-space-aside">Orari aperura</h5>
@@ -707,7 +707,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="" itemprop="addressCountry">Italy</span>
+                        <span class="" itemprop="addressCountry">italia</span>
                     </a>
                 </p>
             </div>
