--- a/contatti.html
+++ b/contatti.html
@@ -65,7 +65,7 @@
                         <span itemprop="postalCode">60024</span>
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
-                        <span class="hide-for-small" itemprop="addressCountry">Italy</span></a> 
+                        <span class="hide-for-small" itemprop="addressCountry">italia</span></a> 
                     </h6>
                     <div class="row">
                         <div class="medium-11 large-11 columns extra-space-image-event-blog">
@@ -511,7 +511,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="" itemprop="addressCountry">Italy</span>
+                        <span class="" itemprop="addressCountry">italia</span>
                     </a>
                 </p>
             </div>
