--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </div>
                 </form>
             </div> -->
-            <div class="large-4 medium-4 columns extra-space">
+            <div class="large-6 medium-6 small-8 small-centered large-centered columns extra-space">
                 <ul class="small-block-grid-3">
                     <li>
                         <span>
@@ -252,7 +252,7 @@
                     </li>
                     <li>
                         <span>
-                        <a class="fi-social-google-plus icon-font-style" href="https://plus.google.com/102722719947371580904"></a>
+                        <a class="fi-social-google-plus icon-font-style" href="https://plus.google.com/102722719947371580904/about" target="_blank"></a>
                         </span>
                     </li>
                 </ul>
@@ -266,17 +266,17 @@
                 <p>
                     <a href="http://maps.google.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                         <span itemprop="streetAddress">Via Centofinestre, 20</span>
-                        <br class="hide-for-small">
+                        <br>
                         <span itemprop="postalCode">60024</span>
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="" itemprop="addressCountry">Italy</span>
+                        <span class="hide-for-small" itemprop="addressCountry">Italia</span>
                     </a>
                 </p>
             </div>
             <div class="small-6 medium-4 large-4 columns clearfix">
-                <h4 class="subheader">Prenota Tavolo</h4>
+                <h4 class="subheader">Riserva Tavolo</h4>
                 <p>
                     <a href="tel:+393385071940">
                         <span itemprop="telephone">+39 338 507 1940</span>
