--- a/team-giovanni-attilio.html
+++ b/team-giovanni-attilio.html
@@ -190,7 +190,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="" itemprop="addressCountry">Italy</span>
+                        <span class="" itemprop="addressCountry">italia</span>
                     </a>
                 </p>
             </div>
