--- a/team-juliet-maza.html
+++ b/team-juliet-maza.html
@@ -186,7 +186,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="" itemprop="addressCountry">Italy</span>
+                        <span class="" itemprop="addressCountry">italia</span>
                     </a>
                 </p>
             </div>
